@@ -1,23 +1,0 @@
-name:        xcp-rrd
-version:     0.9.1
-synopsis:    XCP RRD library
-authors:     Citrix
-license:     LGPL-2.1 with OCaml linking exception
-obuild-ver:  1
-
-library xcp-rrd
-  src-dir: lib
-  modules: Rrd
-  build-deps: stdext, rpclib, rpclib.syntax
-  pp: camlp4o
-
-executable rewrite
-  src-dir: test
-  main: rewrite.ml
-  build-deps: xcp-rrd
-
-executable dummy
-  src-dir: test
-  main: dummy.ml
-  build-deps: xcp-rrd
-
